syntax = "proto3";

import "google/protobuf/empty.proto";
package file_service;


message infoFile {
    string nombe = 1;
    string link = 2;
}

message GetFileRequest {
  string name = 1;
}

service FileService {
  rpc AddFile(GetFileRequest) returns (google.protobuf.Empty);
  rpc GetFileByName (GetFileRequest) returns (infoFile);
} 

